--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pizza",
-  "homepage": "https://ErickV3larde.github.io/tienda-pizza",
+  "homepage": "https://ErickV3larde.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
